--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,3 @@
-<div class="p-3 mb-2 bg-dark text-white"></div>
 <app-navbar></app-navbar>
-<div class="row">
-  <div class="col">
-  </div>
-
-  <div class="col">
-      <app-finance></app-finance>
-      <h4>Expenses Record</h4>
-      <app-member [member]="item" *ngFor="let item of fins.expenses"></app-member>
-  </div>
-  <span class="border border-dark"></span>
-   <div class="col">
-      <app-summary></app-summary>
-   </div>
-</div>
+<br>
+<router-outlet></router-outlet>
