--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -1,9 +1,8 @@
-
 <div class="card" style="width: 18rem;">
     <div class="card-body">
       <h6 class="card-title" >{{data.amount}}</h6><hr>
       <p class="card-text" >{{data.desc}}</p>
       <button class="btn btn-danger" (click)="delete()">Delete</button>
+      <button class="btn btn-primary" (click)="update()">Update</button>
     </div>
 </div>
- 
