--- a/src/app/finance/finance.component.html
+++ b/src/app/finance/finance.component.html
@@ -1,4 +1,10 @@
-<br><input class="form-control" type="number"  placeholder="Enter amount" [(ngModel)]="fins.expform.amount"><br>
-<input class="form-control" type="text"  placeholder="Enter description of expense" [(ngModel)]="fins.expform.desc"><br>
-<button class="btn btn-primary" (click)="fins.addExpense()">Add Expense</button><br><br>
+<div class="row">
+    <div class="col-lg-7"></div>
+    <div class="col-lg-4">
+        <br><br><br>
+        <input class="form-control" type="number"  placeholder="Enter amount" [(ngModel)]="expense.amt"><br>
+        <input class="form-control" type="text"  placeholder="Enter description of expense" [(ngModel)]="expense.desc"><br>
+        <button class="btn btn-primary" (click)="addExpense()">Add Expense</button><br><br>
 
+    </div>
+</div>
