--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -1,3 +1,8 @@
-<br><h4>Summary</h4>
-<p>Total expense: </p>
-
+<div class="row">
+    <div class="col-lg-8"></div>
+    <div class="col-lg-4">
+        <br><br><br><br>
+        <u class="text-light"><h2 class="text-light">Total Expense:</h2></u>
+        <h4 class="text-light">Rs. {{totExp}}</h4>
+    </div>
+</div>
