--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -4,7 +4,7 @@
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
 			<div class="card-header ">
-				<h3>Sign In</h3>
+				<h3>Sign Up</h3>
 			</div>
 			<div class="card-body">
 				<form>
@@ -20,22 +20,13 @@
 						</div>
 						<input [(ngModel)]="password" type="password" class="form-control" name="pwd"  placeholder="Password">
 					</div>
-					
-          <div class="form-group">
-						<button (click)="SignIn()" type="submit" class="btn float-right btn-warning">Login</button>
+          <br>
+					<div class="form-group">
+						<button (click)="SignUp()" type="submit" class="btn float-right btn-warning">Sign Up</button>
 					</div>
-
-          
 				</form>
-        
 			</div>
-      
-			<div class="card-footer">
-                <div class="d-flex justify-content-center links">
-					Don't have an account?<a routerLink="/signup">Sign Up</a>
-				
-			</div>
-			</div>
+
 		</div>
 	</div>
 </div>
