--- a/src/app/member/member.component.scss
+++ b/src/app/member/member.component.scss
@@ -3,9 +3,5 @@
     margin-top: auto;
     margin-bottom: auto;
     width: 400px;
-    background-color: black;
-}
-
-.body {
-    background-color: blue($color: #000000);
+    background-color: #ffff99;
 }
