--- a/src/app/expense-details/expense-details.component.html
+++ b/src/app/expense-details/expense-details.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-    <div class="col-lg-3"></div>
+    <div class="col-lg-7"></div>
     <div class="col-lg-3">
-        <h2>Expense Details</h2>
-        <p><b>Amount: </b>{{expenses.amt}}</p>
-        <p><b>Description: </b>{{expenses.desc}}</p>
-        <br><br>
-        <button class="btn btn-warning" routerLink="/home">Go Back</button>
+        <h2 class="text-light">Expense Details</h2><br>
+        <p class="text-light"><b>Amount: </b>{{expenses.amt}}</p>
+        <p class="text-light"><b>Description: </b>{{expenses.desc}}</p>
+        <br>
+        <button class="btn btn-primary" routerLink="/home">Back</button>
     </div>
     <div class="col-lg-3"></div>
 </div>
