--- a/src/app/member/member.component.html
+++ b/src/app/member/member.component.html
@@ -2,8 +2,8 @@
 <div class="card" style="width: 18rem;">
     <div class="card-body">
       <div *ngIf="!isformvisible">
-        <h6 (click)="sendToExpenseDetails()" class="card-title text-light" ><b>Amount: </b>{{data.amt}}</h6><hr>
-        <p class="card-text text-light"><b>Description: </b>{{data.desc}}</p><br>
+        <h6 (click)="sendToExpenseDetails()" class="card-title" ><b>Amount: </b>{{data.amt}}</h6><hr>
+        <p class="card-text"><b>Description: </b>{{data.desc}}</p><br>
         <div class="text-center"><button class="btn btn-danger mx-3"><i class="fa fa-trash" style="color:#000000" (click)="delete()"></i></button>
         <button class="btn btn-warning mx-3"><i class="fa fa-edit" style="color:#000000" (click)="onUpdateClicked()"></i></button></div>
       </div>
