--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,4 +12,12 @@ body {
     position: absolute;
     top: 0;
     left: 0;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+img {
+    max-width: 100%;
 }
