--- a/src/app/member/member.component.scss
+++ b/src/app/member/member.component.scss
@@ -3,5 +3,5 @@
     margin-top: auto;
     margin-bottom: auto;
     width: 400px;
-    background-color: #ffff99;
+    background-color: #ffffcc;
 }
